--- a/index.qmd
+++ b/index.qmd
@@ -77,19 +77,17 @@ library(Utilities.Package)
 ::: {.incremental style="line-height: 150px;"}
 -   **1** - Introduction
 
--   **2** - Summary of the first 2 years
+- **2** - From Hyperspectral to Multispectral
 
--   **3** - Work of the year
+- **3** - BiCOME Drone paper
 
-    -   BiCOME Drone paper - Finalization and Publication
+- **4** - DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
 
-    -   DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
+- **5** - Heatwave on Seagrass experiment
 
-    -   Heatwave on Seagrass experiment
+- **6** - Additional work parallel to the thesis
 
--   **4** - Additional work parallel to the thesis
-
--   **5** - Conclusion
+- **7** - Conclusion & Perspectives
 :::
 
 ## 
@@ -661,7 +659,7 @@ Good Knowledge of soft bottom intertidal habitats
 ## 
 
 ::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2500px; transform: translate(-50%, -50%)"}
-[Summary of the first 2 years]{style="color: black; font-size: 150px; font-weight: bold;"}
+[From Hyper- to Multi-spectral Resolution]{style="color: black; font-size: 150px; font-weight: bold;"}
 :::
 
 ## Taxonomic resolution {auto-animate="true" style="font-size: 60px;"}
@@ -1159,6 +1157,12 @@ image_write(image = img_animated,
             path = "Images/Spectra_distance_gif.gif")
 
 ```
+
+##
+
+::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2500px; transform: translate(-50%, -50%)"}
+[BiCOME Drone paper]{style="color: black; font-size: 150px; font-weight: bold;"}
+:::
 
 ## Drone mapping of Intertidal Vegetation {auto-animate="true" style="font-size: 60px;"}
 
