--- a/index.qmd
+++ b/index.qmd
@@ -79,7 +79,7 @@ library(Utilities.Package)
 
 - **2** - From Hyperspectral to Multispectral
 
-- **3** - BiCOME Drone paper
+- **3** - Study case : Drone multispectral mapping
 
 - **4** - DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction
 
@@ -1168,7 +1168,7 @@ image_write(image = img_animated,
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1196,7 +1196,7 @@ image_write(image = img_animated,
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1288,7 +1288,7 @@ tr:nth-child(4) {
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1344,7 +1344,7 @@ tr:nth-child(4) {
 
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1390,10 +1390,14 @@ Neurtal Network
 ![](Images/DISCOV_logo.png){height="550"}
 :::
 
+::: {.absolute .fragment .fade-in fragment-index="2" bottom="15%" left="15%" style="font-size: 70px;"}
+**D**rone **I**ntertidal **S**ediment **C**lassification **O**f **V**egetation
+:::
+
 ## Prediction {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1447,7 +1451,7 @@ Neurtal Network
 ## Validation {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1467,7 +1471,7 @@ Neurtal Network
 ## Results {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1490,7 +1494,7 @@ Neurtal Network
 ## Variable Importance  {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1548,7 +1552,7 @@ B10 is  important for the model
 ## Submission to a Journal {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1587,7 +1591,7 @@ B10 is  important for the model
 ## The Model {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
@@ -1620,12 +1624,12 @@ B10 is  important for the model
 ## The Model {auto-animate="true" style="font-size: 60px;"}
 ::: {.absolute top="0" left="95%"}
 ::: sectionhead
-[1]{style="opacity:0.25"} 2 [3 4 5 6]{style="opacity:0.25"}
+[1 2]{style="opacity:0.25"} 3 [4 5 6]{style="opacity:0.25"}
 :::
 :::
 
 ::: {.absolute bottom="0%" right="-2%"}
-[16]{style="color: black;"}
+[17]{style="color: black;"}
 :::
 
 ::: {.absolute data-id="gitrepo" left="0%"}
@@ -1635,6 +1639,10 @@ B10 is  important for the model
 :::
 
 ::: {.absolute .fragment .fade-in fragment-index="1" top="10%" left="40%" style="font-size: 50px;"}
+  - **Data avaibility in the paper**
+:::
+
+::: {.absolute .fragment .fade-in fragment-index="1" top="18%" left="40%" style="font-size: 50px;"}
 - Pre-trained model DISCOV V1, ready to be used
 - Training dataset
 - Validation dataset
@@ -1653,3 +1661,14 @@ B10 is  important for the model
 ::: {.absolute .fragment .fade-in fragment-index="2" top="67%" left="63%"}
 ![](Images/Arrow_right_short.png){width="300"}
 :::
+
+## 
+
+::: {.gradient_box style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2400px; transform: translate(-50%, -50%)"}
+[DISCOV model - Application and Update for *Gracilaria vermiculophylla* prediction]{style="color: black; font-size: 150px; font-weight: bold;"}
+:::
+
+```{r }
+
+```
+
