--- a/index.qmd
+++ b/index.qmd
@@ -16,6 +16,19 @@ format:
           after_body: custom.js
 editor_options: 
   chunk_output_type: console
+include-in-header: 
+  - text: |
+      <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+      <style>
+        #map {
+            height: 600px; /* Adjust the height of the map */
+            width: 100%;
+        }
+      </style>
+include-after-body: 
+  - text: |
+      <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+      <script src="script.js"></script>
 ---
 
 ```{r library}
@@ -1886,7 +1899,7 @@ bbox_EU <- st_bbox(c(xmin = -30, ymin = 20,
 :::
 
 
-::: {.absolute   data-id="Gracillaria" top="3%" left="42%"}
+::: {.absolute data-id="Gracillaria" top="3%" left="42%"}
 ![](Images/20240410_112100.jpg){width="800"}
 :::
 
@@ -1981,16 +1994,14 @@ saveWidget(m, "maps/map.html", selfcontained = TRUE)
 ## Slide with Map
 
 
-<iframe src="map.html" width="100%" height="800px" id="map-frame" style="border:none;"></iframe>
+::: {.absolute left="0%" top="10%"}
+<div id="map" style="height: 1000px; width: 800px;"></div>
 
-
-::: {.fragment data-fragment-index="2"}
-<!-- This fragment will trigger the first animation -->
-:::
-
-::: {.fragment data-fragment-index="3"}
-<!-- This fragment will trigger the first animation -->
-:::
+<p class="fragment" data-fragment-index="0">Fly to London</p>
+<p class="fragment" data-fragment-index="1">Fly to Paris</p>
+<p class="fragment" data-fragment-index="2">Fly to New York</p>
+<p class="fragment" data-fragment-index="3">Fly to Tokyo</p>
+::: 
 
 
 
