--- a/index.qmd
+++ b/index.qmd
@@ -1991,18 +1991,47 @@ saveWidget(m, "maps/map.html", selfcontained = TRUE)
 # Print the map
 ```
 
-## Slide with Map
+## INVASEA - Study sites {auto-animate="true" style="font-size: 60px;"}
+
+::: {.absolute top="0" left="95%"}
+::: sectionhead
+[1 2 3]{style="opacity:0.25"} 4 [5 6]{style="opacity:0.25"}
+:::
+:::
+
+::: {.absolute bottom="0%" right="-2%"}
+[19]{style="color: black;"}
+:::
 
 
 ::: {.absolute left="0%" top="10%"}
 <div id="map" style="height: 1000px; width: 800px;"></div>
-
-<p class="fragment" data-fragment-index="0">Fly to London</p>
-<p class="fragment" data-fragment-index="1">Fly to Paris</p>
-<p class="fragment" data-fragment-index="2">Fly to New York</p>
-<p class="fragment" data-fragment-index="3">Fly to Tokyo</p>
 ::: 
 
+::: {.fragment data-fragment-index="1"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="2"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="3"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="4"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="5"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="6"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="7"}
+<!-- This fragment will trigger the first animation -->
+:::
+::: {.fragment data-fragment-index="8"}
+<!-- This fragment will trigger the first animation -->
+:::
 
 
 
