--- a/index.qmd
+++ b/index.qmd
@@ -2013,6 +2013,8 @@ Brittany Estuaries, October 2023 and April 2024
 :::
 :::
 
+
+
 ::: {.fragment .fade-in-then-out data-fragment-index="3"}
 <!-- This fragment will trigger the Belon animation -->
 ::: {.absolute left="40%" top="10%"}
@@ -2043,6 +2045,8 @@ Brittany Estuaries, October 2023 and April 2024
 :::
 :::
 
+
+
 ::: {.fragment .fade-in-then-out data-fragment-index="4"}
 <!-- This fragment will trigger the Aven animation -->
 ::: {.absolute left="40%" top="10%"}
@@ -2061,6 +2065,7 @@ Brittany Estuaries, October 2023 and April 2024
 ![](Images/Aven_Site_2.jpg){width="700"}
 :::
 :::
+
 
 ::: {.fragment .fade-in-then-out data-fragment-index="5"}
 <!-- This fragment will trigger the Pont l'Abbe animation -->
@@ -2086,6 +2091,9 @@ Northern Spain Estuaries, June 2024
 - Vigo, the 26th, 27th and 28th of June 2024
 :::
 :::
+
+
+
 ::: {.fragment .fade-in-then-out data-fragment-index="7"}
 <!-- This fragment will trigger the Santander animation -->
 ::: {.absolute left="40%" top="10%"}
@@ -2100,6 +2108,8 @@ Sentinel-2
 10th of May 2024
 :::
 :::
+
+
 
 ::: {.fragment .fade-in-then-out data-fragment-index="8"}
 <!-- This fragment will trigger the Santander Airport animation -->
@@ -2127,5 +2137,16 @@ Drone Flight Restriction for *Operaciones Especializadas*
 
 ::: {.fragment data-fragment-index="10"}
 <!-- This fragment will trigger the Vigo animation -->
+::: {.absolute left="40%" top="10%"}
+**Vigo, the 26th, 27th and 28th of June 2024**
+:::
+
+::: {.absolute top="17%" left="40%"}
+![](Images/Vigo_Rhodo.jpeg){height="550"}
+:::
+::: {.absolute top="17%" right="0%"}
+![](Images/Group_Marta.JPG){height="550"}
+:::
+
 :::
 
